--- a/css/login.css
+++ b/css/login.css
@@ -9,7 +9,7 @@
 .main-section {
     margin: 0;
     font-weight: 100;
-    background: radial-gradient(#a23982,#1f1013);
+    background: radial-gradient(#ff53cb,#cb8996);
     -webkit-animation: fadeIn 1 1s ease-out;
     -moz-animation: fadeIn 1 1s ease-out;
     -o-animation: fadeIn 1 1s ease-out;
