--- a/css/about.css
+++ b/css/about.css
@@ -79,7 +79,7 @@
 .about-img-1 {
     position: absolute;
     top: 0;
-    opacity: 0; 
+    opacity: 0;
     z-index: 0;
     width: 200px;
     height: 200px;
@@ -109,14 +109,17 @@
         box-shadow: 0px 0px 39px 4px var(--primary-color);
         position: absolute;
         z-index: 1;
+        /* animation: move 1s ease-in-out forwards; */
+        animation: opaci 1s ease-in-out forwards;
 
         &:hover {
             animation: move 1s ease-in-out forwards;
-
+            /* transform: rotatey(180deg); */
         }
 
-        &:hover~.about-img-1{
-            animation: opaci 1s ease-in-out forwards;
+        &:hover~.about-img-1 {
+            /* animation: opaci 1s ease-in-out forwards; */
+            opacity: 1;
         }
     }
 }
@@ -142,9 +145,11 @@
     0% {
         opacity: 0;
     }
+
     50% {
         opacity: 0.3;
     }
+
     100% {
         opacity: 1;
     }
