--- a/css/form.css
+++ b/css/form.css
@@ -8,7 +8,7 @@
 }
 
 .form{
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #6d416d, #a5099d);
+    background: linear-gradient(-45deg, #ee7752, #f03f83, #bb6ebb, #ef0ee3);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	/* height: 100vh; */
@@ -34,6 +34,7 @@
     width: 90%;
     border-radius: 10px;
     background: linear-gradient(90deg, rgb(71, 71, 73) 0%, rgba(153, 148, 148, 1) 0%, rgba(71, 71, 73) 100%);
+    height: 430;
 }
 
 .div-register {
