--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 :root {
     --primary-color: #f50a35;
     --primary-color-dark: #ff6803;
-    --primary-about-color: radial-gradient(circle, rgba(152,150,150,0.7988445378151261) 0%, rgba(45,44,44,1) 100%);
+    --primary-about-color: radial-gradient(circle, rgba(152, 150, 150, 0.7988445378151261) 0%, rgba(45, 44, 44, 1) 100%);
     --secondary-color: #222222;
     --text-light: #090800;
     --bg-light: #fffef7;
@@ -124,6 +124,21 @@ para formar la cruz */
 
 }
 
+.admin-nav {
+    position: fixed;
+    left: 0px;
+    top: 210px;
+    bottom: 0;
+    width: 200px;
+
+    overflow: hidden;
+    background-color: var(--bg-light);
+    transition: width .3s ease-in-out;
+
+}
+
+
+
 /* Una vez que se checkea el hermano input a través del checkbox buscamos nuestro main nav y le decimos que cambie su ancho */
 .input-check:checked~.main-nav {
     width: 240px;
@@ -147,6 +162,12 @@ para formar la cruz */
     margin: 5rem 0;
     padding-right: 1rem;
 }
+
+.nav-list-admin {
+    margin: 5rem 0;
+    padding-right: 1rem;
+}
+
 
 .nav-item .nav-link {
     padding: .25rem 1rem;
@@ -208,6 +229,8 @@ para formar la cruz */
     border-bottom: 1px solid #DDD
 }
 
+
+
 .main-container {
     flex-grow: 1;
     max-width: 92%;
@@ -217,37 +240,41 @@ para formar la cruz */
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(226, 221, 221, 1) 0%, rgba(164, 163, 163, 1) 100%);
 }
 
-.home-form{
+.home-form {
     background: linear-gradient(-45deg, #dedcdc, #ccc8ca, #d39ec7, #4a5b57);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 
@@ -318,6 +345,10 @@ para formar la cruz */
     align-items: center;
 }
 
+
+
+
+
 .label-usuario {
     font-size: small;
     padding: 0 1rem;
@@ -355,16 +386,31 @@ para formar la cruz */
     .main-nav {
         position: relative;
         top: 0;
-        width: auto !important;
+        width: 100% !important;
         background-color: transparent;
+        display: flex;
+        justify-content: space-between;
     }
+
 
     .main-title {
         font-size: 40px;
     }
 
-    .nav-list {
+    .nav-list .nav-list-admin  {
         margin: auto;
+        height: 100%;
+    }
+
+    .nav-list {
+        display: flex;
+        margin: 0;
+        
+    }
+    .nav-list-admin {
+        display: flex;
+        margin: 0;
+        padding-left: 0;
     }
 
     .nav-item {
@@ -375,9 +421,6 @@ para formar la cruz */
         border-bottom: none;
     }
 
-    .nav-list {
-        height: 100%;
-    }
 
     .nav-item .nav-link {
         height: 100%;
@@ -387,9 +430,7 @@ para formar la cruz */
     }
 
 
-    .nav-list {
-        display: flex
-    }
+
 
     .user-menu {
         margin-left: auto;
@@ -514,7 +555,7 @@ para formar la cruz */
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 6;
         overflow: hidden;
-        text-overflow: ellipsis;   
+        text-overflow: ellipsis;
         font-weight: bold;
 
     }
@@ -564,7 +605,7 @@ para formar la cruz */
 
         &:hover {
             background: var(--gradiente-hover);
-            box-shadow:4px 4px 4px 0px rgba(81, 0, 0, 0.656);
+            box-shadow: 4px 4px 4px 0px rgba(81, 0, 0, 0.656);
         }
 
     }
@@ -603,24 +644,25 @@ para formar la cruz */
     }
 
 }
-.feature{
+
+.feature {
     margin: 1rem .5rem 1rem .5rem;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: baseline;
     box-shadow: 9px 14px 29px -15px rgba(103, 101, 101, 0.523);
-    
+
 }
 
 
 @media screen and (width > 768px) {
     .feature-section {
         flex-direction: row;
-        justify-content:space-between;
+        justify-content: space-between;
     }
 
-    .feature{
+    .feature {
         display: flex;
         align-items: flex-start;
         width: 100%;
@@ -692,10 +734,10 @@ para formar la cruz */
     padding: 0 10px;
 }
 
-.footer-link{
+.footer-link {
     text-decoration: none;
     color: var(--bg-light);
-    font-size:small;
+    font-size: small;
 }
 
 .fa-brands,
@@ -790,3 +832,12 @@ para formar la cruz */
     }
 }
 
+
+
+.user-profile-picture{
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-inline: .75rem .5rem;
+}
